--- a/css/style1.css
+++ b/css/style1.css
@@ -1,4 +1,4 @@
- @charset "utf-8"
+ @charset "utf-8";
 /*
 
  19FA-SWDV-131-001-Web Styling
@@ -16,7 +16,7 @@
 
 /*=== HTML Styles ===*/
 
-html {
+html{
 	/*width: 100%;*/
 	background-color: #19424E;
 }
