--- a/css/style1.css
+++ b/css/style1.css
@@ -278,8 +278,8 @@ main{
 		padding-top: 0px;
 		padding-bottom: 5px;
 	}
-	
-	
+       
+ 
 
   /* New Styles Added Below */
 
@@ -397,20 +397,17 @@ main{
 		   text-align: center;
 		   padding-left: 5px;
 		   padding-right: 5px;
-	   } 
-	  
-	
-
+	   }
    }
    
 /* =================================
     Desktop Styles: 769px and greater
    =================================
 */
-   
+/*   
     @media only screen and (min-width: 769px){
 
-   }
+   }*/
  
  
  
