2/13/2020 Added php database exception handling.

--- a/css/style1.css
+++ b/css/style1.css
@@ -304,8 +304,14 @@ main{
 	   }
  
         /*=== Visitor Info Styles ===*/
-
         
+        
+        /*=== Login Styles ===*/
+
+        #loginform{
+            width: 200px;
+            padding-left: 20%;
+        }
         
   /* New Styles Added Below */
 
